For external resource declarations in component descriptors, added support for file paths, not just URLs, in the <fileUrl> element. UIMA-132: https://issues.apache.org/jira/browse/UIMA-132
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk/uimaj-core@489773 13f79535-47bb-0310-9956-ffa450edef68